--- a/phpdoc/Patterns/Commons.html
+++ b/phpdoc/Patterns/Commons.html
@@ -29,11 +29,13 @@
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Commons/ConfigurationRegistry.html"><abbr title="Patterns\Commons\ConfigurationRegistry">ConfigurationRegistry</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                     </table>
     
