--- a/phpdoc/Patterns/Interfaces.html
+++ b/phpdoc/Patterns/Interfaces.html
@@ -51,7 +51,8 @@
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Interfaces/RepositoryInterface.html"><abbr title="Patterns\Interfaces\RepositoryInterface">RepositoryInterface</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Interfaces/ResponseInterface.html"><abbr title="Patterns\Interfaces\ResponseInterface">ResponseInterface</abbr></a></td>
@@ -59,7 +60,8 @@
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Interfaces/RouterInterface.html"><abbr title="Patterns\Interfaces\RouterInterface">RouterInterface</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Interfaces/StaticOptionableInterface.html"><abbr title="Patterns\Interfaces\StaticOptionableInterface">StaticOptionableInterface</abbr></a></td>
@@ -75,11 +77,13 @@
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Interfaces/ViewInterface.html"><abbr title="Patterns\Interfaces\ViewInterface">ViewInterface</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Interfaces/WebPageInterface.html"><abbr title="Patterns\Interfaces\WebPageInterface">WebPageInterface</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                     </table>
     
