--- a/phpdoc/Patterns/Abstracts.html
+++ b/phpdoc/Patterns/Abstracts.html
@@ -25,15 +25,18 @@
                         <table>
                             <tr>
                     <td><a href="../Patterns/Abstracts/AbstractAccessible.html"><abbr title="Patterns\Abstracts\AbstractAccessible">AbstractAccessible</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Abstracts/AbstractResponse.html"><abbr title="Patterns\Abstracts\AbstractResponse">AbstractResponse</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Abstracts/AbstractSingleton.html"><abbr title="Patterns\Abstracts\AbstractSingleton">AbstractSingleton</abbr></a></td>
@@ -41,7 +44,8 @@
                 </tr>
                             <tr>
                     <td><a href="../Patterns/Abstracts/AbstractView.html"><abbr title="Patterns\Abstracts\AbstractView">AbstractView</abbr></a></td>
-                    <td class="last"></td>
+                    <td class="last">
+</td>
                 </tr>
                     </table>
     
