--- a/phpdoc/Patterns/Abstracts/AbstractAccessible.html
+++ b/phpdoc/Patterns/Abstracts/AbstractAccessible.html
@@ -36,7 +36,7 @@
                 </td>
                 <td class="last">
                     <a href="#method___set">__set</a>(string $var, string $val)
-                    <p>Set an object property, accessing it by &quot;setVariable&quot; if the method exists</p>
+                    <p>Set an object property, accessing it by "setVariable" if the method exists</p>
                 </td>
                 <td></td>
             </tr>
@@ -46,7 +46,7 @@
                 </td>
                 <td class="last">
                     <a href="#method___get">__get</a>(string $var)
-                    <p>Get an object property, accessing it by &quot;getVariable&quot; if the method exists</p>
+                    <p>Get an object property, accessing it by "getVariable" if the method exists</p>
                 </td>
                 <td></td>
             </tr>
@@ -56,7 +56,7 @@
                 </td>
                 <td class="last">
                     <a href="#method___isset">__isset</a>(string $var)
-                    <p>Test if an object property has been set, using the &quot;issetVariable&quot; method if defined</p>
+                    <p>Test if an object property has been set, using the "issetVariable" method if defined</p>
                 </td>
                 <td></td>
             </tr>
@@ -66,7 +66,7 @@
                 </td>
                 <td class="last">
                     <a href="#method___unset">__unset</a>(string $var)
-                    <p>Test if an object property has been set, using the &quot;unsetVariable&quot; method if defined</p>
+                    <p>Test if an object property has been set, using the "unsetVariable" method if defined</p>
                 </td>
                 <td></td>
             </tr>
@@ -81,8 +81,9 @@
     <strong>__set</strong>(string $var, string $val)</code>
     </h3>
     <div class="details">
-        <p>Set an object property, accessing it by &quot;setVariable&quot; if the method exists</p>
-        <p></p>
+        <p>Set an object property, accessing it by "setVariable" if the method exists</p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -120,8 +121,9 @@
     <strong>__get</strong>(string $var)</code>
     </h3>
     <div class="details">
-        <p>Get an object property, accessing it by &quot;getVariable&quot; if the method exists</p>
-        <p></p>
+        <p>Get an object property, accessing it by "getVariable" if the method exists</p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -139,7 +141,7 @@
                     <table>
         <tr>
             <td><abbr title="Patterns\Abstracts\misc">misc</abbr></td>
-            <td>Returns the result of the &quot;getVariable&quot; method, of the property otherwise</td>
+            <td>Returns the result of the "getVariable" method, of the property otherwise</td>
         </tr>
     </table>
 
@@ -154,8 +156,9 @@
     <strong>__isset</strong>(string $var)</code>
     </h3>
     <div class="details">
-        <p>Test if an object property has been set, using the &quot;issetVariable&quot; method if defined</p>
-        <p></p>
+        <p>Test if an object property has been set, using the "issetVariable" method if defined</p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -188,8 +191,9 @@
     <strong>__unset</strong>(string $var)</code>
     </h3>
     <div class="details">
-        <p>Test if an object property has been set, using the &quot;unsetVariable&quot; method if defined</p>
-        <p></p>
+        <p>Test if an object property has been set, using the "unsetVariable" method if defined</p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
