--- a/phpdoc/Patterns/Abstracts/AbstractOptionable.html
+++ b/phpdoc/Patterns/Abstracts/AbstractOptionable.html
@@ -83,7 +83,8 @@
     </h3>
     <div class="details">
         <p>Set an array of options</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -91,7 +92,7 @@
                     <tr>
                 <td>array</td>
                 <td>$options</td>
-                <td>A table of options to define, key=&gt;value pairs</td>
+                <td>A table of options to define, key=>value pairs</td>
             </tr>
             </table>
 
@@ -101,7 +102,7 @@
                     <table>
         <tr>
             <td><a href="../../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a></td>
-            <td>Returns `$this` for method chaining</td>
+            <td>Returns <code>$this</code> for method chaining</td>
         </tr>
     </table>
 
@@ -117,7 +118,8 @@
     </h3>
     <div class="details">
         <p>Set the value of a specific option</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -140,7 +142,7 @@
                     <table>
         <tr>
             <td><a href="../../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a></td>
-            <td>Returns `$this` for method chaining</td>
+            <td>Returns <code>$this</code> for method chaining</td>
         </tr>
     </table>
 
@@ -156,7 +158,8 @@
     </h3>
     <div class="details">
         <p>Get the array of options</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
             
                             <h4>Return Value</h4>
@@ -180,7 +183,8 @@
     </h3>
     <div class="details">
         <p>Get the value of a specific option</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -203,7 +207,7 @@
                     <table>
         <tr>
             <td>array</td>
-            <td>The current option&#039;s value if defined, `$default` otherwise</td>
+            <td>The current option's value if defined, <code>$default</code> otherwise</td>
         </tr>
     </table>
 
