--- a/phpdoc/Patterns/Commons/ConfigurationRegistry.html
+++ b/phpdoc/Patterns/Commons/ConfigurationRegistry.html
@@ -36,7 +36,8 @@
                 </td>
                 <td class="last">
                     <a href="#method___construct">__construct</a>()
-                    <p></p>
+                    <p>
+</p>
                 </td>
                 <td></td>
             </tr>
@@ -86,7 +87,7 @@
                 </td>
                 <td class="last">
                     <a href="#method_addConfig">addConfig</a>($name, $value, $scope = null)
-                    <p>Alias of the `setConfig` method</p>
+                    <p>Alias of the <code>setConfig</code> method</p>
                 </td>
                 <td></td>
             </tr>
@@ -121,8 +122,10 @@
     <strong>__construct</strong>()</code>
     </h3>
     <div class="details">
-        <p></p>
-        <p></p>
+        <p>
+</p>
+        <p>
+</p>
         <div class="tags">
             
             
@@ -137,7 +140,8 @@
     </h3>
     <div class="details">
         <p>Set the value of a specific option with depth</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -145,7 +149,7 @@
                     <tr>
                 <td>string</td>
                 <td>$name</td>
-                <td>The index of the configuration value to get, with a depth using notation `index:name`</td>
+                <td>The index of the configuration value to get, with a depth using notation <code>index:name</code></td>
             </tr>
                     <tr>
                 <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
@@ -165,7 +169,7 @@
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/ConfigurationRegistry.html"><abbr title="Patterns\Commons\ConfigurationRegistry">ConfigurationRegistry</abbr></a></td>
-            <td>Returns `$this` for method chaining</td>
+            <td>Returns <code>$this</code> for method chaining</td>
         </tr>
     </table>
 
@@ -181,7 +185,8 @@
     </h3>
     <div class="details">
         <p>Get the value of a specific option with depth</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -189,7 +194,7 @@
                     <tr>
                 <td>string</td>
                 <td>$name</td>
-                <td>The index of the configuration value to get, with a depth using notation `index:name`</td>
+                <td>The index of the configuration value to get, with a depth using notation <code>index:name</code></td>
             </tr>
                     <tr>
                 <td><abbr title="Patterns\Commons\misc">misc</abbr></td>
@@ -225,7 +230,8 @@
     </h3>
     <div class="details">
         <p>Set an array of options</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -248,7 +254,7 @@
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/ConfigurationRegistry.html"><abbr title="Patterns\Commons\ConfigurationRegistry">ConfigurationRegistry</abbr></a></td>
-            <td>Returns `$this` for method chaining</td>
+            <td>Returns <code>$this</code> for method chaining</td>
         </tr>
     </table>
 
@@ -264,7 +270,8 @@
     </h3>
     <div class="details">
         <p>Set the value of a specific option</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -292,7 +299,7 @@
                     <table>
         <tr>
             <td><a href="../../Patterns/Commons/ConfigurationRegistry.html"><abbr title="Patterns\Commons\ConfigurationRegistry">ConfigurationRegistry</abbr></a></td>
-            <td>Returns `$this` for method chaining</td>
+            <td>Returns <code>$this</code> for method chaining</td>
         </tr>
     </table>
 
@@ -307,8 +314,9 @@
     <strong>addConfig</strong>($name, $value, $scope = null)</code>
     </h3>
     <div class="details">
-        <p>Alias of the `setConfig` method</p>
-        <p></p>
+        <p>Alias of the <code>setConfig</code> method</p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -316,17 +324,20 @@
                     <tr>
                 <td></td>
                 <td>$name</td>
-                <td></td>
+                <td>
+</td>
             </tr>
                     <tr>
                 <td></td>
                 <td>$value</td>
-                <td></td>
+                <td>
+</td>
             </tr>
                     <tr>
                 <td></td>
                 <td>$scope</td>
-                <td></td>
+                <td>
+</td>
             </tr>
             </table>
 
@@ -352,7 +363,8 @@
     </h3>
     <div class="details">
         <p>Get the array of options</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -360,12 +372,14 @@
                     <tr>
                 <td></td>
                 <td>$default</td>
-                <td></td>
+                <td>
+</td>
             </tr>
                     <tr>
                 <td></td>
                 <td>$scope</td>
-                <td></td>
+                <td>
+</td>
             </tr>
             </table>
 
@@ -382,7 +396,8 @@
     </h3>
     <div class="details">
         <p>Get the value of a specific option</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -390,17 +405,20 @@
                     <tr>
                 <td></td>
                 <td>$name</td>
-                <td></td>
+                <td>
+</td>
             </tr>
                     <tr>
                 <td></td>
                 <td>$default</td>
-                <td></td>
+                <td>
+</td>
             </tr>
                     <tr>
                 <td></td>
                 <td>$scope</td>
-                <td></td>
+                <td>
+</td>
             </tr>
             </table>
 
