--- a/phpdoc/Patterns/Interfaces/ViewInterface.html
+++ b/phpdoc/Patterns/Interfaces/ViewInterface.html
@@ -56,7 +56,7 @@
                 </td>
                 <td class="last">
                     <a href="#method_getTemplate">getTemplate</a>($name)
-                    <p>Get a template file path (relative to `option[&#039;templates_dir&#039;]`)</p>
+                    <p>Get a template file path (relative to <code>option['templates_dir']</code>)</p>
                 </td>
                 <td></td>
             </tr>
@@ -72,7 +72,8 @@
     </h3>
     <div class="details">
         <p>Building of a view content including a view file passing it parameters</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -80,12 +81,14 @@
                     <tr>
                 <td></td>
                 <td>$view_file</td>
-                <td></td>
+                <td>
+</td>
             </tr>
                     <tr>
                 <td>array</td>
                 <td>$params</td>
-                <td></td>
+                <td>
+</td>
             </tr>
             </table>
 
@@ -102,7 +105,8 @@
     </h3>
     <div class="details">
         <p>Get an array of the default parameters for all views</p>
-        <p></p>
+        <p>
+</p>
         <div class="tags">
             
             
@@ -116,8 +120,9 @@
     <strong>getTemplate</strong>($name)</code>
     </h3>
     <div class="details">
-        <p>Get a template file path (relative to `option[&#039;templates_dir&#039;]`)</p>
-        <p></p>
+        <p>Get a template file path (relative to <code>option['templates_dir']</code>)</p>
+        <p>
+</p>
         <div class="tags">
                             <h4>Parameters</h4>
 
@@ -125,7 +130,8 @@
                     <tr>
                 <td></td>
                 <td>$name</td>
-                <td></td>
+                <td>
+</td>
             </tr>
             </table>
 
