Updating the documentation

--- a/phpdoc/classes.html
+++ b/phpdoc/classes.html
@@ -110,6 +110,14 @@
             </tr>
                     <tr>
                 <td>
+                    <em>                    <a href="Patterns/Interfaces/CachableInterface.html" target="main"><abbr title="Patterns\Interfaces\CachableInterface">Patterns\Interfaces\CachableInterface</abbr></a>
+                    </em>                </td>
+                <td>
+                    Manage a cachable item object
+                </td>
+            </tr>
+                    <tr>
+                <td>
                     <em>                    <a href="Patterns/Interfaces/CollectionInterface.html" target="main"><abbr title="Patterns\Interfaces\CollectionInterface">Patterns\Interfaces\CollectionInterface</abbr></a>
                     </em>                </td>
                 <td>
