--- a/phpdoc/interfaces.html
+++ b/phpdoc/interfaces.html
@@ -29,6 +29,12 @@
                 </td>
             </tr>
                     <tr>
+                <td><a href="Patterns/Interfaces/CachableInterface.html" target="main"><abbr title="Patterns\Interfaces\CachableInterface">Patterns\Interfaces\CachableInterface</abbr></a></td>
+                <td class="last">
+                    Manage a cachable item object
+                </td>
+            </tr>
+                    <tr>
                 <td><a href="Patterns/Interfaces/CollectionInterface.html" target="main"><abbr title="Patterns\Interfaces\CollectionInterface">Patterns\Interfaces\CollectionInterface</abbr></a></td>
                 <td class="last">
                     Collection interface
