--- a/phpdoc/Patterns/Abstracts/AbstractSingleton.html
+++ b/phpdoc/Patterns/Abstracts/AbstractSingleton.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Abstracts\AbstractSingleton | Patterns</title>
+        <title>Patterns\Abstracts\AbstractSingleton | </title>
                     <link rel="stylesheet" type="text/css" href="../../stylesheet.css">
                             </head>
         <body id="class">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Class</div>
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractSingleton</h1>
@@ -27,9 +27,9 @@
             <div class="description">
             <p>A singleton abstract class</p>
             <p>No abstract method is defined but the best practice is to define an <code>init()</code> method in
- the child class as it will be called after instance creation. Arguments passed to the
- <code>getInstance</code> and <code>getInstanceByClassname</code> methods will be transmitted to the <code>__construct</code>
- or <code>init</code> method.</p>
+the child class as it will be called after instance creation. Arguments passed to the
+<code>getInstance</code> and <code>getInstanceByClassname</code> methods will be transmitted to the <code>__construct</code>
+or <code>init</code> method.</p>
 
 <p>The complete stack trace for an instance creation is:</p>
 
@@ -37,11 +37,11 @@
 <li><p>if the constructor is public (<em>bad practice</em>):</p>
 
 <p>$class->__construct( arguments )
-   $class->init()</p></li>
+  $class->init()</p></li>
 <li><p>if the constructor is not public (<em>good practice</em>):</p>
 
 <p>$class = new classname
-   $class->init( arguments )</p></li>
+  $class->init( arguments )</p></li>
 </ul>
 </p>
         </div>
@@ -87,7 +87,7 @@
         <h2>Details</h2>
 
                         <h3 id="method_getInstance">
-        <div class="location">at line 69</div>
+        <div class="location">at line 72</div>
         <code>        static    public            object
     <strong>getInstance</strong>()</code>
     </h3>
@@ -112,7 +112,7 @@
     </div>
 
                 <h3 id="method_getInstanceByClassname">
-        <div class="location">at line 87</div>
+        <div class="location">at line 90</div>
         <code>        static    public            object
     <strong>getInstanceByClassname</strong>($classname)</code>
     </h3>
@@ -148,7 +148,7 @@
     </div>
 
                 <h3 id="method___clone">
-        <div class="location">at line 122</div>
+        <div class="location">at line 135</div>
         <code>            public            
     <strong>__clone</strong>()</code>
     </h3>
