--- a/phpdoc/Patterns/Abstracts/AbstractStaticCreator.html
+++ b/phpdoc/Patterns/Abstracts/AbstractStaticCreator.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Abstracts\AbstractStaticCreator | Patterns</title>
+        <title>Patterns\Abstracts\AbstractStaticCreator | </title>
                     <link rel="stylesheet" type="text/css" href="../../stylesheet.css">
                             </head>
         <body id="class">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Class</div>
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractStaticCreator</h1>
@@ -65,8 +65,7 @@ on static creation (in non-static env) and by constructor.</p>
                 </td>
                 <td class="last">
                     <a href="#method_create">create</a>()
-                    <p>
-</p>
+                    <p>Static creation of the object</p>
                 </td>
                 <td></td>
             </tr>
@@ -112,10 +111,8 @@ on static creation (in non-static env) and by constructor.</p>
     <strong>create</strong>()</code>
     </h3>
     <div class="details">
-        <p>
-</p>
-        <p>
-</p>
+        <p>Static creation of the object</p>
+        <p>This may use the same arguments as the <code>init()</code> method.</p>
         <div class="tags">
             
                             <h4>Return Value</h4>
