--- a/phpdoc/Patterns/Commons/Collection.html
+++ b/phpdoc/Patterns/Commons/Collection.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Commons\Collection | Patterns</title>
+        <title>Patterns\Commons\Collection | </title>
                     <link rel="stylesheet" type="text/css" href="../../stylesheet.css">
                             </head>
         <body id="class">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Class</div>
     <h1><a href="../../Patterns/Commons.html">Patterns\Commons</a>\Collection</h1>
@@ -82,7 +82,7 @@
                 </td>
                 <td class="last">
                     <a href="#method_reset">reset</a>()
-                    <p>Put the index value at 0 This must be an alias of \Iterator::rewind()</p>
+                    <p>Alias of self::rewind()</p>
                 </td>
                 <td></td>
             </tr>
@@ -142,7 +142,7 @@
                 </td>
                 <td class="last">
                     <a href="#method_pos">pos</a>()
-                    <p>Get the current index This must be an alias of \Iterator::current()</p>
+                    <p>Alias of self::current()</p>
                 </td>
                 <td></td>
             </tr>
@@ -469,7 +469,7 @@
     <strong>reset</strong>()</code>
     </h3>
     <div class="details">
-        <p>Put the index value at 0 This must be an alias of \Iterator::rewind()</p>
+        <p>Alias of self::rewind()</p>
         <p>
 </p>
         <div class="tags">
@@ -603,7 +603,7 @@
     <strong>pos</strong>()</code>
     </h3>
     <div class="details">
-        <p>Get the current index This must be an alias of \Iterator::current()</p>
+        <p>Alias of self::current()</p>
         <p>
 </p>
         <div class="tags">
