--- a/phpdoc/doc-index.html
+++ b/phpdoc/doc-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Index | Patterns</title>
+        <title>Index | </title>
                     <link rel="stylesheet" type="text/css" href="stylesheet.css">
                             </head>
         <body id="overview">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Index</div>
 
@@ -74,8 +74,7 @@
                     <dd>Build the page title</dd><dt><a href="Patterns/Interfaces/WebPageInterface.html#method_buildMetas"><abbr title="Patterns\Interfaces\WebPageInterface">WebPageInterface</abbr>::buildMetas</a>() &mdash; <em>Method in class <a href="Patterns/Interfaces/WebPageInterface.html"><abbr title="Patterns\Interfaces\WebPageInterface">WebPageInterface</abbr></a></em></dt>
                     <dd>Build the page metas</dd>        </dl><h2 id="letterC">C</h2>
         <dl id="index"><dt><a href="Patterns/Abstracts/AbstractStaticCreator.html#method_create"><abbr title="Patterns\Abstracts\AbstractStaticCreator">AbstractStaticCreator</abbr>::create</a>() &mdash; <em>Method in class <a href="Patterns/Abstracts/AbstractStaticCreator.html"><abbr title="Patterns\Abstracts\AbstractStaticCreator">AbstractStaticCreator</abbr></a></em></dt>
-                    <dd>
-</dd><dt><a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a> &mdash; <em>Class in namespace <a href="Patterns/Commons.html">Patterns\Commons</a></em></dt>
+                    <dd>Static creation of the object</dd><dt><a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a> &mdash; <em>Class in namespace <a href="Patterns/Commons.html">Patterns\Commons</a></em></dt>
                     <dd>Collection manager : allows to set, get, loop and seek in an array collection</dd><dt><a href="Patterns/Commons/Collection.html#method_current"><abbr title="Patterns\Commons\Collection">Collection</abbr>::current</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
                     <dd>Gets the value of the collection at current index</dd><dt><a href="Patterns/Commons/Collection.html#method_count"><abbr title="Patterns\Commons\Collection">Collection</abbr>::count</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
                     <dd>Counts the number of entries in the collection</dd><dt><a href="Patterns/Commons/ConfigurationRegistry.html"><abbr title="Patterns\Commons\ConfigurationRegistry">ConfigurationRegistry</abbr></a> &mdash; <em>Class in namespace <a href="Patterns/Commons.html">Patterns\Commons</a></em></dt>
@@ -206,7 +205,7 @@
         <dl id="index"><dt><a href="Patterns/Abstracts/AbstractView.html#method_prependOutput"><abbr title="Patterns\Abstracts\AbstractView">AbstractView</abbr>::prependOutput</a>() &mdash; <em>Method in class <a href="Patterns/Abstracts/AbstractView.html"><abbr title="Patterns\Abstracts\AbstractView">AbstractView</abbr></a></em></dt>
                     <dd>Prepend the output content to the existing content</dd><dt><a href="Patterns/Commons/Collection.html#method_prev"><abbr title="Patterns\Commons\Collection">Collection</abbr>::prev</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
                     <dd>Decrease the current index</dd><dt><a href="Patterns/Commons/Collection.html#method_pos"><abbr title="Patterns\Commons\Collection">Collection</abbr>::pos</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
-                    <dd>Get the current index This must be an alias of \Iterator::current()</dd><dt><a href="Patterns/Commons/Collection.html#method_push"><abbr title="Patterns\Commons\Collection">Collection</abbr>::push</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
+                    <dd>Alias of self::current()</dd><dt><a href="Patterns/Commons/Collection.html#method_push"><abbr title="Patterns\Commons\Collection">Collection</abbr>::push</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
                     <dd>Pushes a new value at the end of the collection, with no specific index</dd><dt><a href="Patterns/Commons/Collection.html#method_pop"><abbr title="Patterns\Commons\Collection">Collection</abbr>::pop</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
                     <dd>Deletes a value at the end of the collection</dd><dt><a href="Patterns/Interfaces/ArrayInterface.html#method_pop"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr>::pop</a>() &mdash; <em>Method in class <a href="Patterns/Interfaces/ArrayInterface.html"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a></em></dt>
                     <dd>Deletes a value at the end of the collection</dd><dt><a href="Patterns/Interfaces/ArrayInterface.html#method_push"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr>::push</a>() &mdash; <em>Method in class <a href="Patterns/Interfaces/ArrayInterface.html"><abbr title="Patterns\Interfaces\ArrayInterface">ArrayInterface</abbr></a></em></dt>
@@ -222,7 +221,7 @@
                     <dd>Reset the parameters for the current view on an empty array</dd><dt><a href="Patterns/Abstracts/AbstractView.html#method_render"><abbr title="Patterns\Abstracts\AbstractView">AbstractView</abbr>::render</a>() &mdash; <em>Method in class <a href="Patterns/Abstracts/AbstractView.html"><abbr title="Patterns\Abstracts\AbstractView">AbstractView</abbr></a></em></dt>
                     <dd>Building of a view content including a view file passing it parameters</dd><dt><a href="Patterns/Commons/Collection.html#method_rewind"><abbr title="Patterns\Commons\Collection">Collection</abbr>::rewind</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
                     <dd>Put the index value at the beginning of the collection array</dd><dt><a href="Patterns/Commons/Collection.html#method_reset"><abbr title="Patterns\Commons\Collection">Collection</abbr>::reset</a>() &mdash; <em>Method in class <a href="Patterns/Commons/Collection.html"><abbr title="Patterns\Commons\Collection">Collection</abbr></a></em></dt>
-                    <dd>Put the index value at 0 This must be an alias of \Iterator::rewind()</dd><dt><a href="Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a> &mdash; <em>Class in namespace <a href="Patterns/Commons.html">Patterns\Commons</a></em></dt>
+                    <dd>Alias of self::rewind()</dd><dt><a href="Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Registry</abbr></a> &mdash; <em>Class in namespace <a href="Patterns/Commons.html">Patterns\Commons</a></em></dt>
                     <dd>A classic registry manager  This class handles a set of registries (array of <code>key=&gt;value</code> pairs) distinguishing current working registry from old ones or others.</dd><dt><a href="Patterns/Interfaces/CrudInterface.html#method_read"><abbr title="Patterns\Interfaces\CrudInterface">CrudInterface</abbr>::read</a>() &mdash; <em>Method in class <a href="Patterns/Interfaces/CrudInterface.html"><abbr title="Patterns\Interfaces\CrudInterface">CrudInterface</abbr></a></em></dt>
                     <dd>
 </dd><dt><a href="Patterns/Interfaces/IteratorInterface.html#method_reset"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr>::reset</a>() &mdash; <em>Method in class <a href="Patterns/Interfaces/IteratorInterface.html"><abbr title="Patterns\Interfaces\IteratorInterface">IteratorInterface</abbr></a></em></dt>
