--- a/phpdoc/Patterns/Abstracts/AbstractOptionable.html
+++ b/phpdoc/Patterns/Abstracts/AbstractOptionable.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Abstracts\AbstractOptionable | Patterns</title>
+        <title>Patterns\Abstracts\AbstractOptionable | </title>
                     <link rel="stylesheet" type="text/css" href="../../stylesheet.css">
                             </head>
         <body id="class">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Class</div>
     <h1><a href="../../Patterns/Abstracts.html">Patterns\Abstracts</a>\AbstractOptionable</h1>
