--- a/phpdoc/Patterns/Abstracts/namespace-frame.html
+++ b/phpdoc/Patterns/Abstracts/namespace-frame.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Abstracts | Patterns</title>
+        <title>Patterns\Abstracts | </title>
                     <link rel="stylesheet" type="text/css" href="../../stylesheet.css">
                             </head>
         </html>
