--- a/phpdoc/Patterns/Commons.html
+++ b/phpdoc/Patterns/Commons.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Commons | Patterns</title>
+        <title>Patterns\Commons | </title>
                     <link rel="stylesheet" type="text/css" href="../stylesheet.css">
                             </head>
         <body id="overview">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Namespace</div>
     <h1>Patterns\Commons</h1>
