--- a/phpdoc/Patterns/Interfaces/ResponseInterface.html
+++ b/phpdoc/Patterns/Interfaces/ResponseInterface.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="robots" content="index, follow, all" />
-        <title>Patterns\Interfaces\ResponseInterface | Patterns</title>
+        <title>Patterns\Interfaces\ResponseInterface | </title>
                     <link rel="stylesheet" type="text/css" href="../../stylesheet.css">
                             </head>
         <body id="class">
@@ -16,7 +16,7 @@
             
         </ul>
 
-        <div id="title">Patterns</div>
+        <div id="title"></div>
 
             <div class="type">Interface</div>
     <h1><a href="../../Patterns/Interfaces.html">Patterns\Interfaces</a>\ResponseInterface</h1>
