Updating doc for 1.0.4

--- a/phpdoc/Patterns/Commons/Collection.html
+++ b/phpdoc/Patterns/Commons/Collection.html
@@ -82,7 +82,7 @@
                 </td>
                 <td class="last">
                     <a href="#method_reset">reset</a>()
-                    <p>Alias of self::rewind()</p>
+                    <p>Put the index value at 0 This must be an alias of \Iterator::rewind()</p>
                 </td>
                 <td></td>
             </tr>
@@ -142,7 +142,7 @@
                 </td>
                 <td class="last">
                     <a href="#method_pos">pos</a>()
-                    <p>Alias of self::current()</p>
+                    <p>Get the current index This must be an alias of \Iterator::current()</p>
                 </td>
                 <td></td>
             </tr>
@@ -469,7 +469,7 @@
     <strong>reset</strong>()</code>
     </h3>
     <div class="details">
-        <p>Alias of self::rewind()</p>
+        <p>Put the index value at 0 This must be an alias of \Iterator::rewind()</p>
         <p>
 </p>
         <div class="tags">
@@ -603,7 +603,7 @@
     <strong>pos</strong>()</code>
     </h3>
     <div class="details">
-        <p>Alias of self::current()</p>
+        <p>Get the current index This must be an alias of \Iterator::current()</p>
         <p>
 </p>
         <div class="tags">
