--- a/phpdoc/classes.html
+++ b/phpdoc/classes.html
@@ -162,6 +162,14 @@
             </tr>
                     <tr>
                 <td>
+                    <em>                    <a href="Patterns/Interfaces/RequestInterface.html" target="main"><abbr title="Patterns\Interfaces\RequestInterface">Patterns\Interfaces\RequestInterface</abbr></a>
+                    </em>                </td>
+                <td>
+                    Interface for classic request handling
+                </td>
+            </tr>
+                    <tr>
+                <td>
                     <em>                    <a href="Patterns/Interfaces/ResponseInterface.html" target="main"><abbr title="Patterns\Interfaces\ResponseInterface">Patterns\Interfaces\ResponseInterface</abbr></a>
                     </em>                </td>
                 <td>
