--- a/phpdoc/interfaces.html
+++ b/phpdoc/interfaces.html
@@ -72,6 +72,12 @@
                 </td>
             </tr>
                     <tr>
+                <td><a href="Patterns/Interfaces/RequestInterface.html" target="main"><abbr title="Patterns\Interfaces\RequestInterface">Patterns\Interfaces\RequestInterface</abbr></a></td>
+                <td class="last">
+                    Interface for classic request handling
+                </td>
+            </tr>
+                    <tr>
                 <td><a href="Patterns/Interfaces/ResponseInterface.html" target="main"><abbr title="Patterns\Interfaces\ResponseInterface">Patterns\Interfaces\ResponseInterface</abbr></a></td>
                 <td class="last">
                     Interface for classic response handling
