Updating documentation for version 1.0.5

--- a/phpdoc/Patterns/Interfaces.html
+++ b/phpdoc/Patterns/Interfaces.html
@@ -59,6 +59,10 @@
 </td>
                 </tr>
                             <tr>
+                    <td><a href="../Patterns/Interfaces/RequestInterface.html"><abbr title="Patterns\Interfaces\RequestInterface">RequestInterface</abbr></a></td>
+                    <td class="last">Interface for classic request handling</td>
+                </tr>
+                            <tr>
                     <td><a href="../Patterns/Interfaces/ResponseInterface.html"><abbr title="Patterns\Interfaces\ResponseInterface">ResponseInterface</abbr></a></td>
                     <td class="last">Interface for classic response handling</td>
                 </tr>
