--- a/phpdoc/Patterns/Interfaces/IteratorInterface.html
+++ b/phpdoc/Patterns/Interfaces/IteratorInterface.html
@@ -23,7 +23,7 @@
     </div>
         <div class="content">
                 <p>interface    <strong>IteratorInterface</strong>        implements
-        <a href="http://php.net/Iterator"><abbr title="Iterator">Iterator</abbr></a></p>
+        <a href="http://php.net/SeekableIterator"><abbr title="SeekableIterator">SeekableIterator</abbr></a></p>
 
             <div class="description">
             <p>Iterator interface</p>
